# service/src/main/webui/src/app/api/model/commandKind.ts
@@ -1,0 +1,17 @@
+/**
+ * service API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export const CommandKind = {
+    Terminal: 'TERMINAL',
+    Chat: 'CHAT'
+} as const;
+export type CommandKind = typeof CommandKind[keyof typeof CommandKind];
+
